// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IsLoading Component should match snapshot and show <Loading /> 1`] = `
<div
  className="page_loading"
>
  <div
    className="spinner"
  >
    <span />
    <span />
    <span />
  </div>
</div>
`;

exports[`IsLoading Component should match snapshot and show <Spinner /> 1`] = `
<div
  className="spinner"
>
  <span />
  <span />
  <span />
</div>
`;
